trunk/Archive2/a7/32593d0a010f5c/main.cpp
#include <map>
#include <vector>

template <typename T>
struct X {
    std::map<int, T>* storage = new std::map<int, T>();
};

int main() {
    X<int> x;
}